[package]
name = "polynomial-ring"
version = "0.5.0-alpha"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "A polynomial implementation"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/polynomial-ring/"
repository = "https://gitlab.com/Toru3/polynomial-ring"
readme = "README.md"
keywords = ["algebra", "polynomial"]
categories = ["data-structures", "algorithms", "mathematics"]

[dependencies]
auto-impl-ops = { version = "0.1.0", features = ["take_mut"] }
num-traits = "0.2.11"
ring-algorithm = { version = "0.6.0", default-features = false }

[dev-dependencies]
num = "0.4.0"
rug = { version = "1.18.0", features = ["num-traits"] }

[features]
default = []
__internal_inject_debug = [] # DO NOT USE

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
