[package]
name = "polynomial-ring"
version = "0.5.1"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2021"
description = "A polynomial implementation"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/polynomial-ring/"
repository = "https://gitlab.com/Toru3/polynomial-ring"
readme = "README.md"
keywords = ["algebra", "polynomial"]
categories = ["data-structures", "algorithms", "mathematics"]

[dependencies]
auto-impl-ops = { version = "0.2.1", features = ["take_mut"] }
num-traits = "0.2.11"
ring-algorithm = { version = "0.8.0" }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
num = "0.4.0"
rug = { version = "1.18.0", features = ["num-traits"] }

[features]
default = []
serde = ["dep:serde"]
__internal_inject_debug = [] # DO NOT USE

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
